--- a/templates/test.html
+++ b/templates/test.html
@@ -27,7 +27,7 @@
         <div class="ui container">
           <a href="#" data-balloon="아틀리에 오신 걸 환영합니다" data-balloon-pos="down"><img src="{% static 'artly_logo.png' %}" class="brand tada-logo" href="#"/></a>
           <div class="right menu">
-            <a class="right item" href="{% url 'home' %}" data-balloon="여러분의 스토리를 공유하세요!" data-balloon-pos="down">
+            <a class="right item" href="#" data-balloon="여러분의 스토리를 공유하세요!" data-balloon-pos="down">
               <i class="alarm outline icon"></i> <span id="mobile-hidden">커뮤니티</span>
             </a>
             <a class="right item" data-balloon="다른 작가들의 작품을 사보세요!" data-balloon-pos="down">
@@ -36,7 +36,7 @@
             <a class="right item" data-balloon="여러 사람들의 프로젝트를 구경하세요!" data-balloon-pos="down">
               <i class="rocket icon"></i> <span id="mobile-hidden">크라우드펀딩</span>
             </a>
-            <a class="right item" href="{% url 'login' %}">
+            <a class="right item" href="#">
               <i class="checkmark box icon"></i> <span id="mobile-hidden">로그인</span>
             </a>
             <a class="right item" id="mobile-hidden">
